-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.0
-
None
-
* Qt Quick 2.9 application on Qt 5.10 (installed from binaries)
* Fedora 26
-
0dbbfc2f2824aa3891fde0b219fb4951e94a64c9
Shortcut stops triggering Action when the Action is assigned to a Button in a Repeater.
This affects QtQuick applications using Controls2.
How to reproduce:
1) Create an Action and assign a shortcut to it, do some action on the trigger
2) Create a Repeater (with only one repetition) with a Button delegate
3) Assign the Action to the Button delegate
4) Start application, hit the shortcut -> BUG -> nothing happens
5) Observation - if the shortcut is reassigned to the Action it starts working again
Desired behavior of course is that the Action triggers. When removing the Repeater the Action triggers. When including it in a simple Button (outside of a Repeater) the Action triggers.
Real use cases include creating multiple buttons in a Repeater and assigning them Actions from an ActionGroup based on their index.
I'm including a minimal example as an attachment.
For Gerrit Dashboard: QTBUG-65889 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
217506,2 | Fix Action shortcuts in Repeater | 5.10 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |