Fix Action shortcuts in Repeater

QQuickRepeater does not set a QObject-parent, so make
QQuickShortcutContext::matcher() start from the object itself and
if no window is found, then iterate to the QObject parents.

Task-number: QTBUG-65889
Change-Id: I30a1ed0616edd002abcf28d1b8dc7e2d87e99c13
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>