src/quicktemplates2/qquickshortcutcontext.cpp
@@ -76,14 +76,16 @@ bool QQuickShortcutContext::matcher(QObject *obj, Qt::ShortcutContext context)
         return true;
     case Qt::WindowShortcut:
         while (obj && !obj->isWindowType()) {
-            obj = obj->parent();
             item = qobject_cast<QQuickItem *>(obj);
             if (item) {
                 obj = item->window();
+                break;
             } else if (QQuickPopup *popup = qobject_cast<QQuickPopup *>(obj)) {
                 obj = popup->window();
                 item = popup->popupItem();
+                break;
             }
+            obj = obj->parent();
         }
         if (QWindow *renderWindow = QQuickRenderControl::renderWindowFor(qobject_cast<QQuickWindow *>(obj)))
             obj = renderWindow;
